# onesynth-server

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  main.spec  onesynth_server.spec  pyproject.toml
app/: infer_engine.py  main.py  onesynth_server.py
