[tool.poetry]
name = "onesynth-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "onesynth_server"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
pandas = "^2.0.3"
soundfile = "^0.12.1"
numpy = "1.24"
humanize = "^4.7.0"
torchinfo = "^1.8.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
nflows = "^0.14"
numba = "^0.57.1"
librosa = "^0.10.0.post2"
torchaudio = "^2.0.2"
natsort = "^8.4.0"
dawdreamer = "^0.7.1"
mido = "^1.3.0"
python-rtmidi = "^1.5.4"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
